<resources>
    <string name="app_name">Query PM2.5 of the City</string>
    <string name="button_query">Query</string>
    <string name="error_message_query_pm25">Please try again</string>
    <string name="loading_message">Loading</string>
    <string name="position_message">Show the Position List</string>
    <string name="city_name">City Name :</string>
    <string name="title_activity_display_details">Datails about Position</string>
    <string name="position_name">Position Name :</string>
    <string name="time">DateTime :</string>
    <string name="quality">Air Quality :</string>
</resources>
